--- a/examples/google-calendar.html
+++ b/examples/google-calendar.html
@@ -12,7 +12,7 @@
 
 <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
 <script src='https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js'></script>
-
+<link rel="preload" href="UntitledSans-Medium.woff2" as="font" type="font/woff2" crossorigin>
 <script>
 
   document.addEventListener('DOMContentLoaded', function() {
@@ -74,8 +74,9 @@
   body {
     margin: 40px 10px;
     padding: 0;
-    font-family: 'Copyright Klim Type Foundry', sans-serif;
-    font-size: 14px;
+    font-family: 'Untitled Sans';
+    font-weight: 500;
+    font-style: normal;
     background-color: #E8E0BD;
     color: #0A0947;
   }
@@ -96,11 +97,11 @@
   th.fc-col-header-cell {
     padding: 2em;
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: 500;
   }
 
   .fc-toolbar-title {
-    font-weight: 400;
+    font-weight: 500;
   }
 
   /* main.css | file:///Users/erkhesmungunshagai/Desktop/Weekdays/Projects/Keys/fullcalendar-5.11.0/lib/main.css */
