--- a/examples/google-calendar.html
+++ b/examples/google-calendar.html
@@ -169,6 +169,24 @@
   display: none;
 }
 
+  .fc-direction-ltr .fc-daygrid-event.fc-event-end, .fc-direction-rtl .fc-daygrid-event.fc-event-start {
+    /* background-color: black; */
+    background-color: #0A0947;
+    text-decoration: underline;
+    color: #E8E0BD;
+    font-weight: 500;
+    padding-left: 4px;
+  }
+
+  .fc-daygrid-dot-event .fc-event-title {
+     font-weight: normal;
+  }
+
+  .fc-daygrid-event-dot {
+    display: none;
+  }
+
+
 /*Tooltip styling */
 .popper,
 .tooltip {
