--- a/examples/google-calendar-mobile.html
+++ b/examples/google-calendar-mobile.html
@@ -12,7 +12,6 @@
 
 <script src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
 <script src='https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js'></script>
-<link rel="preload" href="UntitledSans-Medium.woff2" as="font" type="font/woff2" crossorigin>
 
 <script>
 
@@ -74,6 +73,13 @@
 
 <style>
 
+  @font-face {
+    font-family: 'Untitled Sans';
+    src: url('fonts/UntitledSans-Medium.woff2') format('woff2');
+    font-weight: 500;
+    font-style: normal;
+  }
+  
   body {
     margin: 40px 10px;
     padding: 0;
