--- a/examples/google-calendar-mobile.html
+++ b/examples/google-calendar-mobile.html
@@ -21,7 +21,6 @@
     var calendar = new FullCalendar.Calendar(calendarEl, {
 
       initialView: 'dayGridWeek',
-
       headerToolbar: {
       right: 'prev,next',
       left: 'title',
@@ -146,7 +145,7 @@
 .fc-direction-ltr .fc-daygrid-event.fc-event-end, .fc-direction-rtl .fc-daygrid-event.fc-event-start {
   background-color: transparent;
   color: #0A0947;
-  height: 40px;
+  height: 60px;
   padding: 10px 10px;
   border-bottom: 1px solid #0A0947;
   text-decoration-thickness: 2px;
@@ -178,12 +177,11 @@
 
 .fc-direction-ltr .fc-daygrid-event.fc-event-end, .fc-direction-rtl .fc-daygrid-event.fc-event-start {
   display: flex;
-  flex-direction: row;
-  justify-content: left;
+  flex-direction: column;
 }
 
 .fc-daygrid-dot-event .fc-event-title {
-  flex-grow: 0;
+  flex-shrink: 0;
 }
 
 
@@ -290,7 +288,6 @@ th.fc-col-header-cell {
   /* font-size: 1.75em; */
   font-size: 1.1em;
 }
-
 
 /*Tooltip styling */
 .popper,
