--- a/examples/google-calendar-mobile.html
+++ b/examples/google-calendar-mobile.html
@@ -20,10 +20,16 @@
 
     var calendar = new FullCalendar.Calendar(calendarEl, {
 
-      initialView: 'dayGridWeek',
+      initialView: 'timeGridFourDay',
       headerToolbar: {
       right: 'prev,next',
       left: 'title',
+      },
+      views: {
+        timeGridFourDay: {
+          type: 'dayGrid',
+          duration: { days: 4 },
+        }
       },
 
       editable: true,
