--- a/examples/google-calendar-mobile.html
+++ b/examples/google-calendar-mobile.html
@@ -132,6 +132,8 @@
     color: #E8E0BD;
     font-weight: 500;
     padding-left: 4px;
+    height: auto; 
+    text-align: center; 
   }
 
   .fc-daygrid-dot-event .fc-event-title {
@@ -161,6 +163,7 @@
 
 .fc-daygrid-event {
   border-radius: 0px; 
+  white-space: normal; 
 }
 
 .fc-direction-ltr .fc-daygrid-event.fc-event-end, .fc-direction-rtl .fc-daygrid-event.fc-event-start {
