--- a/examples/google-calendar.html
+++ b/examples/google-calendar.html
@@ -30,11 +30,11 @@
       // THIS KEY WON'T WORK IN PRODUCTION!!!
       // To make your own Google API key, follow the directions here:
       // http://fullcalendar.io/docs/google_calendar/
-      googleCalendarApiKey: 'AIzaSyDfIVMdgrV0I5UEaoYpI-bS4sgCwMGFMAg',
+      googleCalendarApiKey: 'AIzaSyCYPn5w9oWH1PUm1CVDEjArObMD7YTYhZQ',
 
       // US Holidays
       events: {
-        googleCalendarId:'uerhes92@gmail.com'
+        googleCalendarId:'eric@webgasm.co'
       },
 
       eventClick: function(arg) {
