--- a/examples/google-calendar.html
+++ b/examples/google-calendar.html
@@ -30,11 +30,11 @@
       // THIS KEY WON'T WORK IN PRODUCTION!!!
       // To make your own Google API key, follow the directions here:
       // http://fullcalendar.io/docs/google_calendar/
-      googleCalendarApiKey: 'AIzaSyCYPn5w9oWH1PUm1CVDEjArObMD7YTYhZQ',
+      googleCalendarApiKey: 'AIzaSyD3UqMVReW9qyJ09M1cTVwCBhdY0beJJy8',
 
       // US Holidays
       events: {
-        googleCalendarId:'eric@webgasm.co'
+        googleCalendarId:'ericmun711@gmail.com'
       },
 
       eventClick: function(arg) {
