Client ID update

--- a/examples/google-calendar.html
+++ b/examples/google-calendar.html
@@ -34,7 +34,7 @@
 
       // US Holidays
       events: {
-        googleCalendarId:'ericmun711@gmail.com'
+        googleCalendarId:'info@thekeys.com.au'
       },
 
       eventClick: function(arg) {
