--- a/examples/google-calendar.html
+++ b/examples/google-calendar.html
@@ -34,7 +34,7 @@
 
       // US Holidays
       events: {
-        googleCalendarId:'info@thekeys.com.au'
+        googleCalendarId:'c_532f4f76a4395c0888e658eb51e86ea3834979e3ef49c1f54a803d38b703e7db@group.calendar.google.com'
       },
 
       eventClick: function(arg) {
