--- a/examples/google-calendar-mobile.html
+++ b/examples/google-calendar-mobile.html
@@ -45,11 +45,11 @@
       // THIS KEY WON'T WORK IN PRODUCTION!!!
       // To make your own Google API key, follow the directions here:
       // http://fullcalendar.io/docs/google_calendar/
-      googleCalendarApiKey: 'AIzaSyDfIVMdgrV0I5UEaoYpI-bS4sgCwMGFMAg',
+      googleCalendarApiKey: 'AIzaSyBYOB_fp_Ga1INYGGbjJcj21HNh8WZXJvo',
 
       // US Holidays
       events: {
-        googleCalendarId:'uerhes92@gmail.com'
+        googleCalendarId:'c_532f4f76a4395c0888e658eb51e86ea3834979e3ef49c1f54a803d38b703e7db@group.calendar.google.com'
       },
 
         eventClick: function(arg) {
